Added Sample WorkOS Login in golang.
