# docs/swagger.json
@@ -16,6 +16,40 @@
         "version": "1.0"
     },
     "paths": {
+        "/getuserinfo": {
+            "get": {
+                "description": "User Info Endpoint for the service.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "LoginFlow"
+                ],
+                "summary": "UserInfo Endpoint.",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/health": {
+            "get": {
+                "description": "Health Check Endpoint for the service.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "HealthCheck"
+                ],
+                "summary": "Health Check Endpoint for the service.",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/inviteuser": {
             "post": {
                 "security": [
@@ -70,6 +104,23 @@
                     "UserManagement"
                 ],
                 "summary": "List Members for an Org.",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/login": {
+            "get": {
+                "description": "Login Endpoint for the service.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "LoginFlow"
+                ],
+                "summary": "Login Endpoint.",
                 "responses": {
                     "200": {
                         "description": "OK"
